--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="image_box">
-            <img src="assets/images/mk 3.PNG" alt="">
+            <img src="assets/images/mk.PNG" alt="">
             <span class="animate" style="--i:7;"></span>
             <span class="circle-spin"></span>
             <span class="animate" style="--i:7;"></span>
