added new skill

--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
 
     </section>
 
-
     <!-- PROJECT SECTION -->
     <section class="project " id="projects">
         <h2 class="heading">My <span>Projects</span>
@@ -319,13 +318,17 @@
                             <div class="bar"><span></span></div>
                         </div>
 
+                        <div class="progress">
+                            <h3>Tailwind Css <span>100%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
 
                     </div>
 
                     <!-- <span class="animate scroll" style="--i:3;"></span> -->
                 </div>
             </div>
-
             
             <div class="skills-column">
 
@@ -356,15 +359,18 @@
                             <div class="bar"><span></span></div>
                         </div>
 
+                        <div class="progress">
+                            <h3>Bootstrap <span>100%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
 
                     </div>
 
                     <!-- <span class="animate scroll" style="--i:6;"></span></h2> -->
                 </div>
-            </div>
-
-            
+            </div>         
         </div>
+   
     </section>
 
     <!-- CONTACT SECTION -->
