Add README and project images, update index.html

--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@
         <div class="project_main">
             <div class="project_content">
                 <div class="project_image_box">
+                    <img src="assets/images/read-to-impact.png" alt="Read to impact">
+                    <div class="project_text_box">
+                        <p>Read To Impact</p>
+                        <div class="project_btn-box">
+                            <a href="https://read-to-impact.vercel.app" target="_blank" class="btns" rel="noopener noreferrer">View</a>                       
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project_image_box">
                     <img src="assets/images/tvflix-img.png" alt="Tvflix-img">
                     <div class="project_text_box">
                         <p>Tvflix Movies</p>
